Telex to Gempyre

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,16 +6,15 @@ project (${NAME})
 set(CMAKE_CXX_STANDARD 17)
 
 
-
-set(TELEX_PATH $ENV{TELEX_DIR})
+set(GEMPYRE_PATH $ENV{GEMPYRE_DIR})
 
 include_directories(
-    ${TELEX_PATH}/telexlib/include
+    ${GEMPYRE_PATH}/gempyrelib/include
     include
 )
 
-find_package (telex REQUIRED PATHS ${TELEX_PATH})
-include(${TELEX_PATH}/scripts/addResource.cmake_script)
+find_package (gempyre REQUIRED PATHS ${GEMPYRE_PATH})
+include(${GEMPYRE_PATH}/scripts/addResource.cmake_script)
 
 
 add_executable(${PROJECT_NAME}
@@ -28,9 +27,9 @@ addResource(PROJECT ${PROJECT_NAME} TARGET include/${NAME}_resource.h SOURCES gu
 
 add_custom_command(
         OUTPUT include/${NAME}.html.h
-        COMMAND python ${TELEX_PATH}/scripts/genStringResource.py gui/${NAME}.html include/${NAME}.html.h WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        COMMAND python ${GEMPYRE_PATH}/scripts/genStringResource.py gui/${NAME}.html include/${NAME}.html.h WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         DEPENDS gui/${NAME}.html
         )
 
-target_link_libraries (${PROJECT_NAME} telex)
+target_link_libraries (${PROJECT_NAME} gempyre)
 
